# vectextr

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  __init__.py  extract.c  extract.h  extract_test.c  extract_wrapper.cpp  fixed_test_extract.py  hatch_build.py  make_slitdeltas.py  make_testdata.py  pyproject.toml  setup.py  swath.c
tests/: conftest.py  test_extract.py
