[build-system]
requires = ["scikit-build-core>=0.7.0", "pybind11>=2.11.1", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "vectextr"
version = "0.1.0"
description = "Python wrapper for the vectextr C library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "astropy>=5.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
]

[tool.scikit-build]
wheel.packages = []
cmake.build-type = "Debug"
cmake.define = {}
wheel.expand-macos-universal-tags = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
