[build-system]
requires = ["hatchling", "nanobind"]
build-backend = "hatchling.build"

[project]
name = "vectextr"
version = "0.1.0"
description = "Python wrapper for the vectextr C library"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "astropy>=5.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "nanobind",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "nanobind",
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build]
exclude = [
    "*.npz",
    "*.fits",
    "goodplots/",
    "slitdelta_plots/",
    "build/",
    ".git/",
]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
