[build-system]
requires = ["hatchling", "nanobind"]
build-backend = "hatchling.build"

[project]
name = "charslit"
version = "0.1.0"
description = "CharSlit: Python wrapper for characterized slit spectral extraction"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "astropy>=5.0.0",
    "scipy>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "nanobind",
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["charslit"]

[tool.hatch.build]
exclude = [
    "*.npz",
    "*.fits",
    "*.png",
    "goodplots/",
    "slitdelta_plots/",
    "build/",
    ".git/",
]

[tool.pytest.ini_options]
pythonpath = ["."]